@@ -9,5 +9,6 @@ AI algorithm (minmax with alpha-beta pruning) inspired by C'T 10/2014 Denkmaschi
 
 Starting tree depth is 10.
 
-
+VM Arguments:
+--module-path /.../javafx-sdk-15.0.1/lib --add-modules=javafx.controls
 
